refactor(remote/command): Merge overload's business logic